--- a/popup.html
+++ b/popup.html
@@ -7,13 +7,18 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      width: 380px;
+      width: 100%;
+      max-width: 600px;
       padding: 10px;
       background: #f5f5f5;
+      margin: 0 auto;
     }
-    #welcome-screen, #job-board {
-      text-align: center;
+
+    h1, h2, h3 {
+      color: #333;
+      margin: 6px 0;
     }
+
     button {
       padding: 8px 16px;
       margin: 6px 0;
@@ -24,14 +29,40 @@
       cursor: pointer;
       transition: background 0.2s;
     }
+
     button:hover { background-color: #0056b3; }
     button:disabled { background-color: #ccc; cursor: not-allowed; }
+
+    #welcome-screen, #job-board {
+      text-align: center;
+    }
+
     #job-list { max-height: 220px; overflow-y: auto; text-align: left; margin-top: 10px; }
 
-    /* Job Cards */
+    /* Jobs Columns */
+    #jobs-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 10px;
+    }
+
+    #remote-jobs-wrapper, #local-jobs-wrapper {
+      flex: 1 1 280px;
+    }
+
+    #remote-jobs, #local-jobs {
+      max-height: 400px;
+      overflow-y: auto;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      padding: 10px;
+      background: #fff;
+    }
+
     .job {
       border: 1px solid #ddd;
-      padding: 12px;
+      padding: 10px;
       border-radius: 8px;
       margin-bottom: 8px;
       cursor: pointer;
@@ -39,15 +70,42 @@
       box-shadow: 0 1px 3px rgba(0,0,0,0.08);
       transition: background 0.2s, transform 0.1s, box-shadow 0.2s;
     }
-    .job:hover { background: #f0f8ff; transform: translateY(-2px); box-shadow: 0 3px 6px rgba(0,0,0,0.12); }
-    .job-title { font-weight: bold; font-size: 14px; margin-bottom: 4px; }
-    .job-company { font-size: 12px; color: #555; margin-bottom: 4px; }
-    .job-location { font-size: 12px; color: #777; margin-bottom: 6px; }
-    .job-badges { display: flex; flex-wrap: wrap; gap: 4px; }
 
-    /* Search bar */
-    #search-bar { margin: 10px 0; }
-    #job-search { width: 90%; padding: 5px; border-radius: 5px; border: 1px solid #ccc; }
+    .job:hover {
+      background: #f0f8ff;
+      transform: translateY(-2px);
+      box-shadow: 0 3px 6px rgba(0,0,0,0.12);
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 3px 8px;
+      font-size: 11px;
+      border-radius: 12px;
+      color: #fff;
+      margin-left: 6px;
+    }
+
+    .badge-primary { background-color: #007bff; }
+    .badge-success { background-color: #28a745; }
+    .badge-info { background-color: #17a2b8; }
+    .badge-warning { background-color: #fd7e14; }
+    .badge-danger { background-color: #dc3545; }
+
+    /* Search */
+    #search-bar {
+      margin: 10px 0;
+      display: flex;
+      gap: 6px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    #job-search { flex: 1 1 200px; padding: 5px; border-radius: 5px; border: 1px solid #ccc; }
+
+    /* Filters */
+    #filters { margin-top: 10px; display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; }
+    #filters input[type="text"] { padding: 5px; border-radius: 5px; border: 1px solid #ccc; }
 
     /* Saved Jobs */
     #saved-jobs-section {
@@ -56,6 +114,7 @@
       padding-top: 10px;
       text-align: left;
     }
+
     .saved-job {
       padding: 8px 10px;
       border-radius: 8px;
@@ -68,6 +127,7 @@
       border-left: 4px solid #007bff;
       transition: background 0.2s;
     }
+
     .saved-job:hover { background: #d0e7ff; }
     .delete-btn { margin-left: 8px; color: #dc3545; cursor: pointer; font-size: 12px; }
 
@@ -84,6 +144,7 @@
       justify-content: center;
       align-items: center;
     }
+
     .modal-content {
       background: #fff;
       padding: 20px;
@@ -94,6 +155,7 @@
       text-align: left;
       box-shadow: 0 6px 20px rgba(0,0,0,0.2);
     }
+
     .modal-header {
       font-size: 18px;
       font-weight: bold;
@@ -104,41 +166,17 @@
       border-bottom: 1px solid #ddd;
       padding-bottom: 6px;
     }
+
     .close-btn { font-size: 20px; cursor: pointer; color: #333; transition: color 0.2s; }
     .close-btn:hover { color: #007bff; }
+
     .modal-body { font-size: 13px; color: #333; margin-top: 10px; }
 
-    /* Badges */
-    .badge { display: inline-block; padding: 3px 8px; font-size: 11px; border-radius: 12px; color: #fff; line-height: 1; }
-    .badge-remote { background: #007bff; }
-    .badge-local  { background: #6c757d; }
-    .badge-new { background: #17a2b8; }
-    .badge-warning { background: #fd7e14; }
-
-    /* Search history */
-    #search-history { margin-top: 10px; text-align: left; }
-    .history-item { display: inline-flex; align-items: center; background: #f1f1f1; border-radius: 12px; padding: 4px 8px; margin: 3px; font-size: 12px; cursor: pointer; }
-    .history-item:hover { background: #e0e0e0; }
-    .history-item .delete-term-btn { margin-left: 6px; font-weight: bold; color: red; cursor: pointer; }
-
-    #filters { margin-top: 10px; text-align: left; display: flex; flex-direction: column; gap: 8px; }
-    #filters-row { display: flex; gap: 8px; align-items: center; }
-    #filters-row > * { flex: 1; }
-    #filters .small { flex: 0 0 auto; }
-
-    #jobs-container { display: flex; gap: 15px; margin-top: 10px; }
-    #remote-jobs-wrapper, #local-jobs-wrapper { flex: 1; }
-    #remote-jobs, #local-jobs {
-      height: 400px;
-      overflow-y: auto;
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 6px;
-      background: #fff;
+    /* Responsive adjustments */
+    @media (max-width: 640px) {
+      #jobs-container { flex-direction: column; }
+      #remote-jobs-wrapper, #local-jobs-wrapper { flex: 1 1 100%; }
     }
-    #remote-jobs-wrapper h3, #local-jobs-wrapper h3 { text-align: center; margin-top: 0; }
-
-    .helper { font-size: 11px; color: #666; margin-top: 4px; }
   </style>
 </head>
 <body>
@@ -169,16 +207,8 @@
 
     <!-- Filters -->
     <div id="filters">
-      <div id="filters-row">
-        <div>
-          <label for="city-input">City / State (optional)</label>
-          <input type="text" id="city-input" placeholder="City or state (e.g., London, CA)" />
-        </div>
-        <div class="small" style="display:flex; align-items:center; gap:6px;">
-          <input type="checkbox" id="visa-checkbox" />
-          <label for="visa-checkbox" style="margin:0;">Visa sponsorship</label>
-        </div>
-      </div>
+      <input type="text" id="city-input" placeholder="City / State (optional)">
+      <label><input type="checkbox" id="visa-checkbox"> Visa sponsorship</label>
     </div>
 
     <!-- Search bar -->
@@ -187,14 +217,7 @@
       <button id="search-btn">Search</button>
     </div>
 
-    <!-- Search history -->
-    <div id="search-history">
-      <strong>Recent Searches:</strong>
-      <div id="history-list"></div>
-      <button id="clear-history-btn">Clear History</button>
-    </div>
-
-    <!-- Loading message -->
+    <!-- Loading -->
     <div id="loading-message" style="display:none;">Searching jobs...</div>
 
     <!-- Jobs container -->
@@ -230,6 +253,8 @@
   <script src="popup.js"></script>
 </body>
 </html>
+
+
 
 
 
